# multipleTargets

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  conda_environment.yml
ProjA/: CMakeLists.txt
ProjA/config/: config.c  config.h
ProjA/unitTests/: ProjA_unitTest.cpp
ProjB/: CMakeLists.txt
ProjB/config/: config.c  config.h
ProjB/unitTests/: ProjB_unitTest.cpp
src/: library.c
